# aeolus

./: .dockerignore  .env.example  .gitignore  AEOLUS_PITCH.md  BLOG.md  DESIGN_NOTES.md  FULLSTACK_AUDIT.md  README.md  REVAMP_PLAN.md  REVAMP_PLAN_v2.md  design.md  docker-compose.yml  railway.json
.github/workflows/: ci.yml  deploy-aws.yml  deploy.yml
.hallmark/: log.json
.playwright-mcp/: page-2026-07-04T06-22-31-798Z.yml  page-2026-07-04T06-22-52-216Z.yml  page-2026-07-04T06-24-43-931Z.yml  page-2026-07-04T06-25-26-153Z.yml  page-2026-07-04T06-26-17-270Z.yml  page-2026-07-04T06-26-34-279Z.yml  page-2026-07-04T06-26-42-605Z.yml  page-2026-07-04T06-27-11-456Z.yml  page-2026-07-04T06-27-20-468Z.yml  page-2026-07-04T06-49-59-429Z.yml  page-2026-07-04T06-51-32-592Z.yml  page-2026-07-04T06-52-13-783Z.yml  page-2026-07-04T06-52-21-464Z.yml  page-2026-07-04T06-54-30-405Z.yml  page-2026-07-04T07-04-06-273Z.yml  page-2026-07-04T07-04-24-685Z.yml  page-2026-07-04T07-05-10-113Z.yml  page-2026-07-04T07-07-25-043Z.yml  page-2026-07-04T07-07-39-610Z.yml  page-2026-07-04T07-08-43-358Z.yml  page-2026-07-04T07-10-24-021Z.yml  page-2026-07-04T07-10-42-907Z.yml  page-2026-07-04T07-11-08-635Z.yml  page-2026-07-04T07-12-04-693Z.yml  page-2026-07-04T07-15-06-279Z.yml  page-2026-07-04T07-15-58-412Z.yml  page-2026-07-04T07-16-12-576Z.yml  page-2026-07-04T07-21-01-103Z.yml  page-2026-07-04T07-21-26-736Z.yml  page-2026-07-04T07-22-02-444Z.yml  page-2026-07-04T07-24-02-640Z.yml  page-2026-07-04T07-24-21-610Z.yml  page-2026-07-04T07-25-38-856Z.yml  page-2026-07-04T07-25-58-941Z.yml  page-2026-07-04T07-27-34-554Z.yml  page-2026-07-04T07-27-45-230Z.yml  page-2026-07-04T07-28-27-221Z.yml  page-2026-07-04T07-29-13-255Z.yml  page-2026-07-04T07-29-23-267Z.yml  page-2026-07-04T07-30-02-173Z.yml  (+47 more)
apps/api/: Dockerfile  NONDETERMINISM.md  alembic.ini  pyproject.toml  smoke_test.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/src/: main.py  replay.py
apps/api/src/core/: config.py  database.py  logging.py
apps/api/src/costs/: calculator.py  carbon.py
apps/api/src/crew/: __init__.py  far117.py
apps/api/src/data/: airlines.py  opensky.py
apps/api/src/events/: __init__.py  airspace_closure.py  atc_staffing.py  base.py  catalog.py  crew_sickout.py  cyber_incident.py  ground_stop.py  mechanical_aog.py  registry.py  runway_closure.py  security_event.py  volcanic_ash.py  weather_closure.py
apps/api/src/network/: cache.py  stress_test.py
apps/api/src/optimizer/: __init__.py  crew_overbooking.py  explain.py  milp.py
apps/api/src/predictor/: __init__.py  cascade.py
apps/api/src/routes/: agent.py  events.py  flights.py  live.py  network.py  passengers.py  playtest.py  predict.py  recovery.py  simulator.py  weather.py
apps/api/src/simulator/: __init__.py  engine.py
apps/api/src/store/: __init__.py  repository.py
apps/api/src/weather/: __init__.py  client.py
apps/api/src/ws/: handlers.py
apps/api/tests/: test_crew.py  test_event_catalog.py  test_events.py  test_golden_replay.py  test_optimizer.py  test_persistence.py  test_predictor.py  test_reseed_live.py
apps/web/: .dockerignore  Dockerfile  components.json  next-route-generation-shim.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/flights-live/: route.ts
apps/web/app/api/live-status/: route.ts
apps/web/app/api/ws-config/: route.ts
apps/web/app/cookies/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/scenarios/: page.tsx
apps/web/app/simulator/: layout.tsx  page.tsx
apps/web/app/simulator/carbon/: page.tsx
apps/web/app/simulator/cascade/: page.tsx
apps/web/app/simulator/crew/: page.tsx
apps/web/app/simulator/passengers/: page.tsx
apps/web/app/simulator/plans/: page.tsx
apps/web/app/simulator/playtest/: page.tsx  (+1 more)
apps/web/app/terms/: page.tsx
apps/web/components/: providers.tsx
apps/web/components/ds/: live-cost.tsx  logo.tsx  primitives.tsx
apps/web/components/landing/: atmosphere.tsx  cabin-opening.tsx  capabilities.tsx  capability-sections.tsx  final-cta-stage.tsx  footer.tsx  four-plans.tsx  globe.tsx  gsap.ts  hero-cascade.tsx  hero-map.tsx  hero-plane-3d.tsx  hero-section.tsx  hero-stage.tsx  intro.tsx  landing-nav.tsx  marquee.tsx  masked-wordmark.tsx  methodology-section.tsx  motion.tsx  opening-stage.tsx  planes.tsx  pricing.tsx  recovery-loop.tsx  scroll-experience.tsx  scroll-fx.tsx  sky-hero.tsx  trusted-by.tsx  type-fx.tsx
apps/web/components/legal/: cookie-consent.tsx  legal-page.tsx
apps/web/components/simulator/: agent-bubble.tsx  aircraft-detail.tsx  airport-code.tsx  airports.ts  cascade-time-machine.tsx  cascade-timeline.tsx  crew-legality-ledger.tsx  crew-overbooking.tsx  dashboard-loader.tsx  event-panel.tsx  flight-map.tsx  flight-search.tsx  my-flights.tsx  nav.tsx  notification-bell.tsx  ops-brief.tsx  page-shell.tsx  passenger-solutions.tsx  plan-compare.tsx  rail.tsx  recovery-plans.tsx  workspace-chrome.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  skeleton.tsx  tabs.tsx
apps/web/lib/: api.ts  backend-config.ts  backend-url.ts  design-tokens.ts  labels.ts  plan-meta.ts  use-live-cost.ts  utils.ts  websocket.ts
apps/web/stores/: playtest.ts  simulation.ts
benchmarks/k6/: agent-ratelimit.js  compute-workflow.js  network-stress.js  read-load.js  smoke.js
benchmarks/k6/lib/: config.js
data/network/: aircraft.yaml  airports.yaml  crews.yaml  flights.yaml
data/scenarios/: atl_security.yaml  chicago_ground_stop.yaml  crew_sickout_ord.yaml  cyber_incident.yaml  dfw_runway_closure.yaml  iran_airspace_closure.yaml  las_vegas_atc.yaml  n001nb_aog.yaml  ord_thunderstorm.yaml  volcanic_ash_pacific.yaml
infra/db/: init.sql
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
reference/retired-landing-sky/: plane.tsx  punch.tsx
scripts/: generate_network.py  load_bts_data.py  seed_db.py  train_predictor.py
(+11 files in other folders)
