[tool.poetry]
name = "aeolus-api"
version = "0.1.0"
description = "Aeolus airline disruption simulation API"
authors = ["Aeolus Team"]
readme = "../../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
ortools = "^9.10.0"
xgboost = "^2.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
httpx = "^0.27.0"
shapely = "^2.0.0"
geopandas = "^0.14.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
aiokafka = "^0.11.0"
structlog = "^24.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.6.0"}
joblib = "^1.4.0"
pyaml = "^24.4.0"
python-dateutil = "^2.9.0"
geopy = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
black = "^24.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
