[tool.poetry]
name = "aeolus-api"
version = "0.1.0"
description = "Aeolus airline disruption simulation API"
authors = ["Aeolus Team"]
readme = "../../README.md"
package-mode = false

# ── Runtime dependencies ──────────────────────────────────────────────────────
#
# Aeolus is a deterministic in-memory simulator (no DB, no queue, no auth, no
# ML at runtime). The dependency surface mirrors that:
#
#   - fastapi/uvicorn/pydantic  : HTTP + WS surface and config
#   - ortools                   : CP-SAT solver in optimizer/milp.py
#   - numpy                     : numerical helpers in predictor/cascade.py
#   - httpx                     : OpenSky + NWS/FAA outbound clients
#   - pyaml                     : load network YAML on startup
#   - structlog                 : log formatting
#
# Anything pulled in earlier for "future DB integration" (sqlalchemy, alembic,
# asyncpg), "future job queue" (celery, redis, aiokafka), "future auth"
# (python-jose, passlib, python-multipart), or experimental geo/ML stacks
# (shapely, geopandas, geopy, pandas, sentry-sdk, python-dateutil) has been
# removed — nothing in `src/` imported them at runtime.
[tool.poetry.dependencies]
python           = "^3.11"
fastapi          = "^0.115.0"
uvicorn          = {extras = ["standard"], version = "^0.30.0"}
ortools          = "^9.10.0"
numpy            = "^1.26.0"
httpx            = "^0.27.0"
pydantic         = "^2.7.0"
pydantic-settings = "^2.3.0"
structlog        = "^24.2.0"
pyaml            = "^24.4.0"

# ── Optional: predictor training stack ────────────────────────────────────────
#
# The cascade predictor runs as pure physics by default. XGBoost is only
# invoked by `scripts/train_predictor.py` (called lazily inside
# CascadePredictor.train) and `joblib` is only used when loading a saved
# model bundle. Both are kept out of the default install so production
# images stay slim:
#
#     poetry install                    # API runtime only — no ML libs
#     poetry install --with train       # adds XGBoost + sklearn + joblib
[tool.poetry.group.train]
optional = true

[tool.poetry.group.train.dependencies]
xgboost      = "^2.0.0"
scikit-learn = "^1.5.0"
joblib       = "^1.4.0"

# ── Dev tooling ───────────────────────────────────────────────────────────────
[tool.poetry.group.dev.dependencies]
pytest         = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov     = "^5.0.0"
httpx          = "^0.27.0"
ruff           = "^0.4.0"
black          = "^24.4.0"
mypy           = "^1.10.0"
types-pyyaml   = "^6.0.12"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Data tables (aircraft DB, tests) use long lines; formatting them hurts readability.
ignore = ["E501", "N806", "N803"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
# Strict typing across the whole API is a goal; incremental adoption avoids blocking CI.
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.predictor.cascade"
# Optional XGBoost training paths confuse strict inference on classifier/regressor slots.
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.events.runway_closure",
    "src.events.mechanical_aog",
    "src.events.cyber_incident",
    "src.events.crew_sickout",
    "src.routes.simulator",
]
# Loose YAML/event params → timedelta/Object operands until schemas are tightened.
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
